--- a/src/LeapYearChecker/LeapYearChecker.form
+++ b/src/LeapYearChecker/LeapYearChecker.form
@@ -15,7 +15,9 @@
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="1" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <background color="-1"/>
+          <background color="-16600577"/>
+          <font name="Monospaced" size="16" style="1"/>
+          <foreground color="-1"/>
           <opaque value="true"/>
           <text value="Check"/>
           <visible value="true"/>
@@ -28,6 +30,7 @@
           </grid>
         </constraints>
         <properties>
+          <font name="Monospaced" size="16" style="1"/>
           <horizontalAlignment value="0"/>
         </properties>
       </component>
@@ -36,7 +39,7 @@
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="2" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <font name="Monospaced" size="18"/>
+          <font name="Monospaced" size="16" style="1"/>
           <foreground color="-1"/>
           <text value="Input Year"/>
         </properties>
